Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>Starting out on my Software Engineering course. Someday would like to be working somewhere in the Video Game Industry.</p>
